the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do
  template:
    metadata:
      labels:
        app: to-do
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-logs-claim
      containers:
        - name: to-do
          image: titunidoc/devops_kubernetes:1.1217
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
